--- a/management.tex
+++ b/management.tex
@@ -1,35 +1,64 @@
 \section{Management Plan \textcolor{red}{2 page max}}
 \label{sec:manage}
 
-During the first two years of our project, we kept the essence of management strategy: taking geographical proximity of the team and its relatively small size, we had relatively frequent meetings, through which detail of our approaches were determined based on extensive discussions and consensus building with the shared goal of help advancement of ultrafast science through development and distribution of GPU enabled RT-TDDFT software and collaborative research using the software. 
+During the first two years of our project, we kept the essence of management strategy: given the geographical proximity of the team and its fairly small size, we had relatively frequent meetings, through which detail of our approaches were determined based on extensive discussions and consensus building with the shared goal of help advancement of ultrafast science through development and distribution of GPU enabled RT-TDDFT software and collaborative research using the software. 
 
-The software development and validation teams held two two-hour meetings per week where {\bf Tadashi Ogitsu (director)} initiated discussions, and the task leads, {\bf Alfredo Correa (software design)}, {\bf Xavier Andrade (GPU adoption)} and {\bf Das Pemmeraju (validation)} formulated a short to mid term strategy towards the initial goal of completing GPU enabled MPI parallel RT-TDDFT software named INQ, discussed about the progress status, revised strategy if deemed necessary.
+The software development and validation teams held two two-hour meetings per week where {\bf Tadashi Ogitsu (director)} initiated discussions, and the task leads, {\bf Alfredo Correa (software design)}, {\bf Xavier Andrade (GPU adoption)} and {\bf Das Pemmeraju (validation)} formulated a short to mid term strategy towards the initial goal of completing GPU enabled MPI parallel RT-TDDFT software named \textsc{inq}, discussed about the progress status, revised strategy if deemed necessary.
 
-Important factors considered  in developing the strategy were to understand the status of ever evolving HPC systems and the needs of scientific community, while being clearly aware of extent of our development scope for a given mount of resource including potential contribution from the external collaborators on both software development and validation (scientific research). This practice is crucial for the success of our project due to their tight inter-dependencies, rapid and dramatic change in the hardware architecture of HPC systems, such as dual memory spaces and redundant interconnects introduced by the addition of GPU to CPU, as well as relatively immature current status of RT-TDDFT, where significant number of new methodological and algorithmic developments are being expected. 
+Important factors considered in developing the strategy were to understand the status of ever evolving HPC systems and the needs of scientific community, while being clearly aware of extent of our development scope for a given mount of resource including potential contribution from the external collaborators on both software development and validation (scientific research). 
+This practice is crucial for the success of our project due to their tight inter-dependencies, rapid and dramatic change in the hardware architecture of HPC systems, such as dual memory spaces and redundant interconnects introduced by the addition of GPU to CPU, as well as relatively immature current status of RT-TDDFT, where significant number of new methodological and algorithmic developments are being expected. 
 
-Accordingly, we determined that our focus to be on developing and maintaining flexible software consisting of GPU ready libraries that are commonly used in DFT and TDDFT software so as to provide maximum flexibility in transferability of the software for future DOE leadership class HPC systems, which may have diverse architectural variation, while providing a developer friendly software platform to (TD)DFT community maximizing external collaborators participation to the software development. This approach is unique in that currently popular ab-initio software developments, such as VASP, Quantum-Espresso, NWChem, focus on providing rather a complete package being developed by small to modest number of major contributors presumably owing to longer history of DFT software development compared to that of TDDFT.
+Accordingly, we determined that our focus would be on developing and maintaining flexible software consisting of GPU-ready libraries that are commonly used in DFT and TDDFT software so as to provide maximum flexibility in transferability of the software for future DOE leadership class HPC systems, which may have diverse architectural design, while providing a developer friendly software platform to the (TD)DFT community, maximizing external collaborators participation to the software development. 
+This approach is unique in that currently popular ab-initio software developments, such as VASP, Quantum-Espresso, NWChem, focus on providing rather a complete package being developed by small to modest number of major contributors presumably owing to longer history of DFT software development compared to that of TDDFT.
 
-Taking above into consideration, two staff scientists, {\bf Correa} and {\bf Andrade}, at 0.5FTE level were dedicated for design and implementation of our RT-TDDFT software libraries named, INQ. {\bf Correa} has an extensive experience in implementing TDDFT algorithm into Qbox code written by Francois Gygi in C++ computer language and MPI parallelization. In addition, he has been developing C++ template library named Multi for QMCPACK project. Design of Multi shares the same philosophy with our project: provide basic libraries that are designed to be used by scientists (not expert programmers), while securing good performance on complex HPC systems such as a CPU+GPU hybrid computer. {\bf Andrade} has an extensive experience in developing another TDDFT open software named OCTOPUS, in particular, he contributed to its GPU optimization.  
+Taking the above into consideration, two staff scientists, {\bf Correa} and {\bf Andrade}, at 0.5~FTE level were dedicated for design and implementation of our RT-TDDFT software libraries named, \textsc{inq}. 
+{\bf Correa} has an extensive experience in implementing TDDFT algorithm into Qbox code written by Francois Gygi in C++ computer language and MPI parallelization. 
+In addition, he has been developing a C++ template library named \textsc{multi} for the QMCPACK project.
+Design of \textsc{multi} shares the same philosophy with our project: provide basic libraries that are designed to be used by scientists (not expert programmers), while securing good performance on complex HPC systems such as a CPU+GPU hybrid computer. 
+{\bf Andrade} has an extensive experience in developing another TDDFT open software named \textsc{octopus}, in particular, he contributed to its GPU optimization.  
 
-Based on their experiences, {\bf Correa} assumed responsibilities on overall design of the INQ library and software development progress, while {\bf Andrade} assumed responsibility on the design and implementation intimately related to GPU optimization. They held nearly daily communication in the earlier stage to develop overall software design guideline for maximizing balance between software programmability, transferability and performance. 
+Based on their experiences, {\bf Correa} assumed responsibilities on overall design of the \textsc{inq} library and software development progress, while {\bf Andrade} assumed responsibility on the design and implementation intimately related to GPU optimization. 
+They held nearly daily communication in the earlier stage to develop software design guidelines in order to maximize balance between software programmability, transferability and performance. 
 
-One of the most important aspects of software development is a systematic testing. We must ensure that our software produce reliable and reproducible results that are essential for scientific research. {\bf Pemmaraju} (0.1FTE) together with his PD, Alexey Kertzev (1PD), who are experts on TDDFT simulations have developed software testing protocols, which means identifying the type of systems, simulations and physical quantities to be compared against the results produced with well established codes such as QE, Octopus and QB@ll. Note that the software testing suites will be distributed together with the software in order for the external collaborators for their convenience. {\bf Pemmeraju} assumed responsibility in designing and performing INQ software tests.
+One of the most important aspects of software development is a systematic testing. 
+We must ensure that our software produce reliable and reproducible results that are essential for scientific research. 
+{\bf Pemmaraju} (0.1~FTE) together with his PD, Alexey Kertzev (1~PD), who are experts on TDDFT simulations have developed software testing protocols, which means identifying the type of systems, simulations and physical quantities to be compared against the results produced with well established codes such as QE, 
+\textsc{octopus} and QB@ll. 
+Note that the software testing suites are distributed together with the software in order for the external collaborators to ensure correctness in their platforms.
+{\bf Pemmeraju} assumed responsibility in designing and performing \textsc{inq} integration tests.
 
+While our \textsc{inq} software was being developed, the experiments ({\bf Aaron Lindenberg (experimental validation)}) and interpretation ({\bf Liang Tan (interpretation)}) team was tasked to perform more elaborate scientific research that would use \textsc{inq} code when it become available. 
+They assumed responsibilities on designing and conducting theory-experiments collaborative, which would take full advantage of \textsc{inq} code when it become available, however, limited amount of planed experiments could be performed due to the pandemic \textcolor{red}{(beta-alumina and the new paper?)}. 
+Note that {\bf Lindenberg}'s PD, {\bf Xiao (0.5~PD)}, very recently started an assistant Professor position at University of Wisconsin, Madison and are planning to continue the collaboration with us on the subject of ultrafast science.
 
-While our INQ software was being developed, the experiments ({\bf Aaron Lindenberg (experimental validation)}) and interpretation ({\bf Liang Tan (interpretation)}) team was tasked to perform more elaborate scientific researches that would use INQ code when it become available. They assumed responsibilities on designing and conducting theory-experiments collaborative, which would take full advantage of INQ code when it become available, however, limited amount of planed experiments could be performed due to the pandemic (beta-alumina and the new paper?). Note that {\bf Lindenberg}'s PD, {\bf Xiao (0.5PD)}, very recently started an assistant Professor position at University of Wisconsin, Madison and are planning to continue the collaboration with us on the subject of ultrafast science.
+As the experimental validation team was impacted by the pandemic, {\bf Tan} assumed responsibilities on the other activities that are crucial for our project: develop additional software, tight-binding model for coupled spin-electron-ion dynamics that would extend the time scale and length scale of simulations such that it would augment our software validation effort.
+Initiate external collaborations that would contribute to the software validation and expand the INQ user. 
+He was also engaged in publicizing our project via conference/workshop organizations and presentations with advises and assistance by {\bf David Prendergast (internal advisor)}. 
+The original tight-binding software was developed by his PD, {\bf Sangeeta Rujprohit (1~PD)} when she worked for the Prof. Peter Bl\"{o}chl group. 
+She is currently developing a new version for the 2D layered systems under {\bf Tan}'s supervision, which will be used for more elaborate software validation effort with {\bf Lindenberg} team during the second half of our project.
+The tight-binding model will fully leverage information generated by INQ code. 
+For example, electron-ion coupling parameter in non-perturbative limit can be generated by \textsc{inq} and used in the tight-binding simulation. 
 
-As the experimental validation team was impacted by the pandemic, {\bf Tan} assumed responsibilities on the other activities that are crucial for our project: develop additional software, tight-binding model for coupled spin-electron-ion dynamics that would extend the time scale and length scale of simulations such that it would augment our software validation effort. Initiate external collaborations that would contribute to the software validation and expand the INQ user. He was also engaged in publicizing our project via conference/workshop organizations and presentations with advises and assistance by {\bf David Prendergast (internal advisor)}.  The original tight-binding software was developed by his PD, {\bf Sangeeta Rujprohit (1PD)} when she worked for the Prof. Peter Bl\"{o}chl group. She is currently developing a new version for the 2D layered systems under {\bf Tan}'s supervision, which will be used for more elaborate software validation effort with {\bf Lindenberg} team during the second half of our project. The tight-binding model will fully leverage information generated by INQ code. For example, electron-ion coupling parameter in non-perturbative limit can be generated by INQ and used in the tight-binding simulation. 
+In order to facilitate internal and external collaborations, we held all hands meeting approximately every 6 weeks, where we made research planning and completed reporting.
+These meetings were held in person circling LLNL/LBNL/SLAC until early 2020, then switched to online meetings.
+For the technical discussions for the internal collaboration, we started separate monthly meeting in early 2021, when experimental research became gradually feasible. 
+Regular participants were {\bf Linenberg}, {\bf Xiao}, {\bf Pemmaraju}, {\bf Tan}, {\bf Rujprohit} and {\bf Ogitsu} and the rest of members as necessary.
 
-In order to facilitate internal and external collaborations, we held all hands meeting approximately every 6 weeks, where research planning, reporting were made. These meetings were held in person circling LLNL/LBNL/SLAC until early 2020, then switched to online meetings. For the technical discussions for the internal collaboration, we started separate monthly meeting in early 2021, when experimental research became gradually feasible. Regular participants were {\bf Linenberg}, {\bf Xiao}, {\bf Pemmaraju}, {\bf Tan}, {\bf Rujprohit} and {\bf Ogitsu} and the rest of members as necessary.
+We also invited numerous researchers from HPC and ultrafast science communities. 
+David Richards, who leads the LLNL HPC procurement team gave us great insights on the current and future HPC situation from both hardware and system software perspectives, 
+Prof. Yuan Ping of UC Santa Cruz together with her PhD candidate student gave us lecture on the density matrix based spin dynamics simulation code and its capability. This led to our mutual collaboration on charge carrier decay behavior due to defects in perovskite quantum dots and a publication. 
+Prof. David Strubbe of U.C. Merced gave a seminar on this research subject of application of RT-TDDFT to ultra-strong shock physics, which led to invitation to the 2020 virtual Electronic Structure workshop, where {\bf Ogitsu} briefly introduced NPNEQ project to the participants followed by \textsc{inq} tutorial by {\bf Andrade} and {\bf Correa}. 
+A meeting with Francois Gygi was held in order to exchange information about our respective software development plans (\textsc{inq} and \textsc{Qbox}). 
+We visited Prof. Lin Lin of U.C. Berkeley to learn about the state-of-art time integration scheme and GPU adoption. 
+Prof. Carsten Ullrich of U. Missouri gave a presentation about his new methodological development including a new exchange-correlation kernel for RT-TDDFT. 
+Prof. John Rehr gave a presentation about FEFF project.
 
-We also invited numerous researchers from HPC and ultrafast science communities. David Richards, who leads the LLNL HPC procurement team gave us great insights on the current and future HPC situation from both hardware and system software perspectives, Prof. Yuan Ping of UC Santa Cruz together with her PhD candidate student gave us lecture on the density matrix based spin dynamics simulation code and its capability. This led to our mutual collaboration on charge carrier decay behavior due to defects in perovskite quantum dots and a publication. Prof. David Strubbe of U.C. Merced gave a seminar on this research subject of application of RT-TDDFT to shock physics, which led to invitation to the 2020 virtual Electronic Structure workshop, where {\bf Ogitsu} briefly introduced NPNEQ project to the participants followed by INQ tutorial by {\bf Andrade} and {\bf Correa}. A meeting with Francois Gygi was held in order to exchange information about our respective software development plans (INQ and Qbox). We visited Prof. Lin Lin of U.C. Berkeley to learn about the state-of-art time integration scheme and GPU adoption. Prof. Carsten Ullrich of U. Missouri gave a presentation about his new methodological development including a new exchange-correlation kernel for RT-TDDFT. Prof. John Rehr gave a presentation about FEFF project.
+International nature of our SAB led to our strategy that SAB will be invited to our meeting one by one resolving scheduling constraint. 
+Prof. Yabana of U. Tsukuba was invited and gave a lecture on his \textsc{salmon} project. 
+We discussed various aspect of software development and distribution. 
+Prof. Emilio Artacho of Cambridge University is scheduled to participate our meeting and discuss about software development and distribution plans of NPNEQ and his project (CECAM's Electronic Structure Library) after the midterm review.
 
-
-International nature of our SAB led to our strategy that SAB will be invited to our meeting one by one resolving scheduling constraint. Prof Yabana of U. Tsukuba was invited and gave a lecture on his Yambo project. We discussed various aspect of software development and distribution. Prof. Emilio Artacho of Cambridge University is scheduled to participate our meeting and discuss about software development and distribution plans of NPNEQ and his project after the midterm review.
-
-
-
-The director, {\bf Ogitsu}, oversaw all the activities and communicated with the members assisting redirecting effort, for instance, of the activities impacted by the pandemic at 0.25FTE support level.  
+The director, {\bf Ogitsu}, oversaw all the activities and communicated with the members assisting redirecting effort, for instance, of the activities impacted by the pandemic at 0.25FTE support level.
 
 {\small\color{red}
 \begin{itemize}
@@ -42,6 +71,5 @@ The director, {\bf Ogitsu}, oversaw all the activities and communicated with the
 \end{itemize}
 }
 
-
-
 \clearpage
+
