--- a/research.tex
+++ b/research.tex
@@ -330,9 +330,14 @@ Development of this model will be accelerated by the team's recent experience wi
 As a by-product of this work, the \textsc{inq} code will contain an interface that will facilitate user extraction of parameters for model simulations.
 
 \subsubsection{Demagnetization in optically excited perovskite nickelates}
-The perovskite nickelates RNiO$_3$ are host to a number of unique structural, electronic and magnetic transitions~\cite{Giovannetti2009,Hampel2017,Beyerlein2018}. The melting of the low-temperature antiferromagentic order in photoexcited nickelates~\cite{Caviglia2013} is suggested to be
-directly linked to the melting of charge order, but the details and control of this coupling are not well understood. The metal-insulator transition involves structural changes that split Ni$^{3+}$ ions to two inequivalent sites, which surprisingly do not involve any Jahn-Teller distortion, unlike typical charge-transfer transitions in other oxide perovskites. In future work, we plan to address these unresolved questions using a combination of real-time TDDFT simulation ({\bf Tan}) and time domain THz emission spectroscopy together with Ultrafast Electron Diffraction ({\bf Lindenberg}). Similar to the approach to be taken in Section~\ref{sec:2dafm}, this combination of experimental techniques will measure antiferromagnetic dynamics together with correlated structural changes. Simulation efforts will target the process of charge order melting due to the instantaneous redistribution of charge carriers during photoexcitation process, and the creation of  metastable spiral spin structures over 0.5 ps. 
-\textsc{inq} scaling will let us extend these calculations to heterostructures, which are of interest because of possible superconductivity in these structures. These simulations will investigate exchange bias effects at the  RMnO$_3$/RNiO$_3$ interface, the modulation of orbital occupation due to strain and interface effects, and energy transfer across the interface during and after photoexcitation.
+
+The perovskite nickelates \(\mathrm{RNiO_3}\) are host to a number of unique structural, electronic and magnetic transitions~\cite{Giovannetti2009,Hampel2017,Beyerlein2018}.
+The melting of the low-temperature antiferromagentic order in photoexcited nickelates~\cite{Caviglia2013} is suggested to be directly linked to the melting of charge order, but the details and control of this coupling are not well understood. 
+The metal-insulator transition involves structural changes that split \(\mathrm{Ni^{3+}}\) ions to two inequivalent sites, which surprisingly do not involve any Jahn-Teller distortion, unlike typical charge-transfer transitions in other oxide perovskites. 
+In future work, we plan to address these unresolved questions using a combination of real-time TDDFT simulation ({\bf Tan}) and time domain THz emission spectroscopy together with Ultrafast Electron Diffraction ({\bf Lindenberg}). 
+Similar to the approach to be taken in Section~\ref{sec:2dafm}, this combination of experimental techniques will measure antiferromagnetic dynamics together with correlated structural changes. 
+Simulation efforts will target the process of charge order melting due to the instantaneous redistribution of charge carriers during photoexcitation process, and the creation of metastable spiral spin structures over \(0.5~\mathrm{ps}\). 
+\textsc{inq} scaling will let us extend these calculations to heterostructures, which are of interest because of possible superconductivity in these structures. These simulations will investigate exchange bias effects at the \(\mathrm{RMnO_3}/\mathrm{RNiO_3}\) interface, the modulation of orbital occupation due to strain and interface effects, and energy transfer across the interface during and after photoexcitation.
 
 \subsubsection{Nonlinear nonequilibrium response in topological materials}
 
