--- a/development.tex
+++ b/development.tex
@@ -23,14 +23,13 @@ Outreach summer school director, two students.
 QMCPACK library
 
 As requested by the program, one of the central objectives of the first half of the NPNEQ center was the delivery of a performant GPU DFT code to tackle non-perturbative and non-equilibrium phenomena studied by the center.
-INQ is a new implementation of density functional theory (DFT) and time-dependent DFT (TDDFT) written from scratch to work on graphical processing units (GPUs).  
-Besides GPU support,INQ makes use of modern code design features and takes advantage of newly available hardware.
-By designing the code around algorithms, rather than against specific implementations and numerical  libraries, we aim to provide a concise and modular code.
-The result is a fairly complete DFT/TDDFT implementation in roughly 12,000 lines of open-source C++code representing a modular platform for community-driven application development on emerging high-performance computing architectures.
 
-Talk about libraries used by QMCPACK also.
+Talk about libraries used by QMCPACK also. interaction with other projects
 
 
-Outreach activities include the organization of a symposium at the 2021 Molecular Foundry Annual User meeting (August 19-20, 2021). The symposium, entitled “Non-Equilibrium and Non-Perturbative Experimental and Theoretical Methods for Dynamical Science”, aims to survey recent progress in manipulation, measurement, and simulation of non-equilibrium dynamics. Alongside the symposium organization, the INQ team will also be presenting a tutorial-style introduction to the INQ code during the Molecular Foundry User Meeting, as a way to introduce the code to the electronic structure community. 
+Outreach activities include the organization of a symposium at the 2021 Molecular Foundry Annual User meeting (August 19-20, 2021). 
+The symposium, entitled ``Non-Equilibrium and Non-Perturbative Experimental and Theoretical Methods for Dynamical Science'', aims to survey recent progress in manipulation, measurement, and simulation of non-equilibrium dynamics.
+Alongside the symposium organization, the \textsc{inq} team will also be presenting a tutorial-style introduction to the code during the Molecular Foundry User Meeting, as a way to introduce the code to the electronic structure community.
 
 \clearpage
+
