--- a/Tadashi_Refs.bib
+++ b/Tadashi_Refs.bib
@@ -1,3 +1,25 @@
+@inproceedings{Beckingsale2019,
+  title={RAJA: Portable performance for large-scale scientific applications},
+  author={Beckingsale, David A and Burmark, Jason and Hornung, Rich and Jones, Holger and Killian, William and Kunen, Adam J and Pearce, Olga and Robinson, Peter and Ryujin, Brian S and Scogland, Thomas RW},
+  booktitle={2019 ieee/acm international workshop on performance, portability and productivity in {HPC} ({P3HPC})},
+  pages={71--81},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{CarterEdwards2014,
+  title = "Kokkos: Enabling manycore performance portability through polymorphic memory access patterns ",
+  journal = "J. Parallel Distrib. Comput.",
+  volume = "74",
+  number = "12",
+  pages = "3202 - 3216",
+  year = "2014",
+  issn = "0743-7315",
+  doi = "https://doi.org/10.1016/j.jpdc.2014.07.003",
+  url = "http://www.sciencedirect.com/science/article/pii/S0743731514001257",
+  author = "H. Carter Edwards and Christian R. Trott and Daniel Sunderland"
+}
+
 @INPROCEEDINGS{Potluri2013,
   author={Potluri, Sreeram and Hamidouche, Khaled and Venkatesh, Akshay and Bureddy, Devendar and Panda, Dhabaleswar K.},
   booktitle={2013 42nd International Conference on Parallel Processing}, 
