--- a/research.tex
+++ b/research.tex
@@ -161,7 +161,7 @@ This mean our parallelization only covers one degree of freedom (the states) and
 That's why we see the time per iteration in the weak scaling going up in Fig.~\ref{fig:scaling_weak}.
 
 Despite the incomplete parallelization, iterator times are below a second per step even with a few hundred atoms, which is very competitive among alternative codes.
-Overall, we developed a code that performs extremely competitive in modern clusters with GPUs.
+Overall, we developed a code that scales extremely well in modern clusters with GPUs.
 
 \paragraph{Validation of results:}
 \begin{figure}[h]
