Updates from Overleaf

--- a/research.tex
+++ b/research.tex
@@ -243,7 +243,7 @@ GPU optimization of the \textsc{inq} code will be used to extend these simulatio
 High defect tolerance has been considered as a main reason for the long charge carrier lifetime and high photoluminescence quantum yield in bulk lead halide perovskites (LHPs). 
 On the other hand, surface defects play a critical role in determining charge carrier dynamics and optical properties, especially for LHP nanocrystals and quantum dots. Revealing the nature of surface defects and developing strategy for their effective passivation are thus of strong interest. 
 {\bf Tan} and {\bf Ogitsu}, together with collaborators at UCSC~\cite{Smart2021}, have used first-principles calculations to reveal that interstitial and antisite defects in a prototypical LHP, \(\mathrm{CsPbBr_3}\), can have lower formation energy when they form at the surface instead of bulk while simultaneously creating deep trap states within the bandgap.
-We show how to choose molecular ligands to passivating these defects, eliminating trap states in favor of shallow states, which enhances photoluminescence. 
+We show how to choose molecular ligands to passivate these defects, eliminating trap states in favor of shallow states, which enhances photoluminescence. 
 (See Fig.~\ref{fig:defect}) This work has implications for  the field of LHPs, especially LHP devices where interfacial chemistry plays an important role in the optoelectronic properties and stability.
 
 This work forms the basis for planned real-time simulations of lossy processes at these defects in the LHPs, such as non-radiative recombination processes and dephasing, which are of fundamental interest for optoelectronic applications. 
@@ -281,7 +281,7 @@ Our simulations revealed a nonlinear multi-step photo-ionization process in liqu
 A manuscript summarizing the findings of our experiment-theory collaboration is currently under review at the journal \emph{Science}.
 In the near future we plan to further extend our studies in this prototypical water system by simulating nonadiabatic Ehrenfest electron-ion dynamics during and after laser illumination using our RT-TDDFT platform \textsc{inq} and compare our results with recent ultrafast experiments. 
 
-\subsubsection{WTe2 collaborations}
+%\subsubsection{WTe2 collaborations}
 
 \subsubsection{Charge density wave melting in 2D materials}
 
