--- a/management.tex
+++ b/management.tex
@@ -1,17 +1,17 @@
 \section{Management Plan \textcolor{red}{2 page max}}
 \label{sec:manage}
 
-During the first two years of our project, we kept the essence of management strategy: given the geographical proximity of the team and its fairly small size, we had relatively frequent meetings, through which detail of our approaches were determined based on extensive discussions and consensus building with the shared goal of help advancement of ultrafast science through development and distribution of GPU enabled RT-TDDFT software and collaborative research using the software. 
+During the first two years of our project, our essential management strategy was based on the geographical proximity of the team and its fairly small size. We had relatively frequent meetings, through which detail of our approaches were determined based on extensive discussions and consensus building with the shared goal of advancement of ultrafast science through development and distribution of GPU enabled RT-TDDFT software and collaborative research using the software. 
 
-The software development and validation teams held two two-hour meetings per week where {\bf Tadashi Ogitsu (director)} initiated discussions, and the task leads, {\bf Alfredo Correa (software design)}, {\bf Xavier Andrade (GPU adoption)} and {\bf Das Pemmeraju (validation)} formulated a short to mid term strategy towards the initial goal of completing GPU enabled MPI parallel RT-TDDFT software named \textsc{inq}, discussed about the progress status, revised strategy if deemed necessary.
+The software development and validation teams held two two-hour meetings per week where {\bf Tadashi Ogitsu (director)} initiated discussions, and the task leads, {\bf Alfredo Correa (software design)}, {\bf Xavier Andrade (GPU adoption)} and {\bf Das Pemmeraju (validation)} formulated a short to mid term strategy towards the initial goal of completing GPU enabled MPI parallel RT-TDDFT software named \textsc{inq}, discussed the progress status, revised strategy if deemed necessary.
 
-Important factors considered in developing the strategy were to understand the status of ever evolving HPC systems and the needs of scientific community, while being clearly aware of extent of our development scope for a given mount of resource including potential contribution from the external collaborators on both software development and validation (scientific research). 
+Important factors considered in developing the strategy were the status of ever-evolving HPC systems and the needs of the scientific community, while being clearly aware of extent of our development scope for a given amount of resource including potential contribution from the external collaborators on both software development and validation (scientific research). 
 This practice is crucial for the success of our project due to their tight inter-dependencies, rapid and dramatic change in the hardware architecture of HPC systems, such as dual memory spaces and redundant interconnects introduced by the addition of GPU to CPU, as well as relatively immature current status of RT-TDDFT, where significant number of new methodological and algorithmic developments are being expected. 
 
 Accordingly, we determined that our focus would be on developing and maintaining flexible software consisting of GPU-ready libraries that are commonly used in DFT and TDDFT software so as to provide maximum flexibility in transferability of the software for future DOE leadership class HPC systems, which may have diverse architectural design, while providing a developer friendly software platform to the (TD)DFT community, maximizing external collaborators participation to the software development. 
 This approach is unique in that currently popular ab-initio software developments, such as VASP, Quantum-Espresso, NWChem, focus on providing rather a complete package being developed by small to modest number of major contributors presumably owing to longer history of DFT software development compared to that of TDDFT.
 
-Taking the above into consideration, two staff scientists, {\bf Correa} and {\bf Andrade}, at 0.5~FTE level were dedicated for design and implementation of our RT-TDDFT software libraries named, \textsc{inq}. 
+Taking the above into consideration, two staff scientists, {\bf Correa} and {\bf Andrade}, at 0.5~FTE level were dedicated for design and implementation of \textsc{inq}. 
 {\bf Correa} has an extensive experience in implementing TDDFT algorithm into Qbox code written by Francois Gygi in C++ computer language and MPI parallelization. 
 In addition, he has been developing a C++ template library named \textsc{multi} for the QMCPACK project.
 Design of \textsc{multi} shares the same philosophy with our project: provide basic libraries that are designed to be used by scientists (not expert programmers), while securing good performance on complex HPC systems such as a CPU+GPU hybrid computer. 
@@ -20,7 +20,7 @@ Design of \textsc{multi} shares the same philosophy with our project: provide ba
 Based on their experiences, {\bf Correa} assumed responsibilities on overall design of the \textsc{inq} library and software development progress, while {\bf Andrade} assumed responsibility on the design and implementation intimately related to GPU optimization. 
 They held nearly daily communication in the earlier stage to develop software design guidelines in order to maximize balance between software programmability, transferability and performance. 
 
-One of the most important aspects of software development is a systematic testing. 
+One of the most important aspects of software development is systematic testing. 
 We must ensure that our software produce reliable and reproducible results that are essential for scientific research. 
 {\bf Pemmaraju} (0.1~FTE) together with his PD, Alexey Kertzev (1~PD), who are experts on TDDFT simulations have developed software testing protocols, which means identifying the type of systems, simulations and physical quantities to be compared against the results produced with well established codes such as QE, 
 \textsc{octopus} and QB@ll. 
@@ -28,8 +28,8 @@ Note that the software testing suites are distributed together with the software
 {\bf Pemmeraju} assumed responsibility in designing and performing \textsc{inq} integration tests.
 
 While our \textsc{inq} software was being developed, the experiments ({\bf Aaron Lindenberg (experimental validation)}) and interpretation ({\bf Liang Tan (interpretation)}) team was tasked to perform more elaborate scientific research that would use \textsc{inq} code when it become available. 
-They assumed responsibilities on designing and conducting theory-experiments collaborative, which would take full advantage of \textsc{inq} code when it become available, however, limited amount of planed experiments could be performed due to the pandemic \textcolor{red}{(beta-alumina and the new paper?)}. 
-Note that {\bf Lindenberg}'s PD, {\bf Xiao (0.5~PD)}, very recently started an assistant Professor position at University of Wisconsin, Madison and are planning to continue the collaboration with us on the subject of ultrafast science.
+They assumed responsibilities on designing and conducting theory and experiments collaboratively, which would take full advantage of \textsc{inq} code when it become available. Even though experimental work during the pandemic has been limited, recent experimental data collected\ref{sec:2dafm}. \textcolor{red}{(beta-alumina and the new paper?)}. 
+{\bf Lindenberg}'s PD, {\bf Xiao (0.5~PD)}, very recently started an assistant Professor position at University of Wisconsin, Madison and are planning to continue the collaboration with us on the subject of ultrafast science.
 
 As the experimental validation team was impacted by the pandemic, {\bf Tan} assumed responsibilities on the other activities that are crucial for our project: develop additional software, tight-binding model for coupled spin-electron-ion dynamics that would extend the time scale and length scale of simulations such that it would augment our software validation effort.
 Initiate external collaborations that would contribute to the software validation and expand the INQ user. 
